# cli-mysql

./: README.md  pyproject.toml
cli/: main.py
cli/queries/: queries.py
database/MySQL_Workbench/: model_Workbench.mwb
docs/: extended_queries.sql
